--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "name": "nextjsproject",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "^14.2.3"
-  },
-  "scripts": {
-    "vercel-build": "npm run prepare && next build"
   }
 }
